# sea-greeter

./: meson.build
src/: browser-commands.c  browser-web-view.c  browser-web-view.h  browser.c  browser.h  extensions.c  lightdm-extension.c  lightdm-extension.h  logger.h  main.c  meson.build  theme.c
src/bridge/: bridge-object.c  bridge-object.h  greeter_comm.c  greeter_comm.h  greeter_config.c  greeter_config.h  lightdm-objects.c  lightdm.c  lightdm.h  theme_utils.c  theme_utils.h  utils.c
src/extension/: greeter_comm.c  greeter_comm.h  greeter_config.c  greeter_config.h  lightdm-signal.c  lightdm-signal.h  lightdm.c  lightdm.h  theme_utils.c  theme_utils.h
src/utils/: ipc-main.c  ipc-main.h  ipc-renderer.c  ipc-renderer.h  utils.c
